   - read 16 bit/sample PNG as 16-bit/sample Imager images
   - write "bilevel" paletted images as 1 bit grayscale images
   - write paletted images as paletted images
   - write 16-bit (or higher)/sample images as 16-bit/sample PNG
     images

  TODO:
    - documentation in C code
    - documentation of new tags, behaviour
    - output tags

Imager 0.90 - unreleased
===========

Bug fixes:

 - Imager::Test::is_imaged() attempted to process an "epsilon"
   parameter but the prototype didn't allow for the extra parameter.
   Corrected the prototype.

 - when downconverting samples (eg. from floating point to 8 bit)
   Imager now rounds the sample value rather than attempting to
   allocate input values over output values equally.  The old
   behaviour had the probably surprising effect of converting a
   floating point 2.1/255.0 into an 8-bit 3 rather than the expected
   2.
   This may result in slightly different 8 or 16-bit output images.

Imager 0.89 - 18 Mar 2012
===========

Bug fixes:

 - getpixel(..., type => "float") and the API i_gpixf() have been
   broken on paletted images since they were implemented.
   https://rt.cpan.org/Ticket/Display.html?id=75258

Other changes:

 - links in the METHOD INDEX now point at the method documentation
   rather than the heading you can find them under.
   https://rt.cpan.org/Ticket/Display.html?id=71495

 - Imager (and the bundled dynamic modules) no longer fallback to
   using DynaLoader if loading via XSLoader fails.
   For the bundled modules this could hide useful error messages.
   https://rt.cpan.org/Ticket/Display.html?id=75560

 - IM_DEBUG_MALLOC mymalloc() no longer sn?printfs() a string to a
   buffer in the array of allocations, but just stores the filename
   pointer and line number.
   https://rt.cpan.org/Ticket/Display.html?id=70388

Imager 0.88 - 22 Feb 2012
===========

 - describe how to build libgif etc on OS X in such a way as to be
   compatible with a fat binary perl (such as the system perl), in